@startuml file-tab-after
title File Tab — AFTER refactoring\n(proposed MVVM design — design artefact only, not production code)

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #E8F5E9
    BorderColor #2E7D32
    ArrowColor #1B5E20
}
skinparam interface {
    BackgroundColor #F3E5F5
    BorderColor #7B1FA2
    ArrowColor #4A148C
}
skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #F57F17
}

' ─────────────────────────────────────────────────────────────────────────────
' View layer — Unity (thin MonoBehaviour adapter, allowed to use UnityEngine)
' ─────────────────────────────────────────────────────────────────────────────
package "View Layer — Unity MonoBehaviour (thin)" <<Rectangle>> #EDE7F6 {

    class FileTabView <<MonoBehaviour>> {
        -_vm: IFileTabViewModel
        +BindTo(vm: IFileTabViewModel): void
        -OnBrowseImageClicked(): void
        -OnBrowseMaskClicked(): void
        -OnLoadClicked(): void
        -OnHduDropdownChanged(index: int): void
        -OnSubsetToggleChanged(val: bool): void
    }

    note right of FileTabView
      Knows ONLY IFileTabViewModel.
      No transform.Find() chains.
      No P/Invoke.
      Registers bindings in OnEnable;
      unregisters in OnDisable.
    end note
}

' ─────────────────────────────────────────────────────────────────────────────
' ViewModel layer — pure C# (no UnityEngine / SteamVR allowed)
' ─────────────────────────────────────────────────────────────────────────────
package "ViewModel Layer — pure C# (no UnityEngine)" <<Rectangle>> #E8F5E9 {

    interface IFileTabViewModel <<interface>> {
        +ImagePath: string?
        +MaskPath: string?
        +HduOptions: IReadOnlyList<HduInfo>
        +SelectedHduIndex: int
        +ZAxisOptions: IReadOnlyList<string>
        +SelectedZAxisIndex: int
        +SubsetEnabled: bool
        +Subset: SubsetBoundsViewModel
        +IsLoadable: bool
        +HeaderText: string?
        +IsLoading: bool
        +ValidationMessage: string?
        +BrowseImageCommand: IAsyncCommand
        +BrowseMaskCommand: IAsyncCommand
        +LoadCommand: IAsyncCommand
        +ClearMaskCommand: ICommand
    }

    class FileTabViewModel {
        -_fitsService: IFitsService
        -_dialogService: IFileDialogService
        -_volumeService: IVolumeService
        -_currentImageInfo: FitsFileInfo?
        -_currentMaskInfo: FitsFileInfo?
        +IsLoadable: bool <<pure C# computed>>
        -BrowseImageAsync(): Task
        -BrowseMaskAsync(): Task
        -LoadAsync(): Task
        -MaskAxesMatchImage(img, mask): bool <<static>>
        -PopulateZAxisOptions(info): void
        -UpdateZAxisMax(): void
    }

    class SubsetBoundsViewModel {
        +XMin, XMax: int
        +YMin, YMax: int
        +ZMin, ZMax: int
        +MaxX, MaxY, MaxZ: int
        +ResetToAxisMaxima(x, y, z: int): void
        +UpdateZAxisMax(newMax: int): void
        +ToDto(): SubsetBounds
    }

    note bottom of SubsetBoundsViewModel
      Replaces three CanvassDesktop methods:
      checkSubsetBounds() → per-property setters
      setSubsetBounds()   → ResetToAxisMaxima()
      updateSubsetZMax()  → UpdateZAxisMax()
    end note

    class FitsFileInfo <<DTO>> #FFF9C4 {
        +FilePath: string
        +HduList: IReadOnlyList<HduInfo>
        +NAxis: int
        +AxisSizes: IReadOnlyDictionary<int,long>
        +HeaderText: string
    }

    class HduInfo <<record>> #FFF9C4 {
        +Index: int
        +Name: string
        +HduType: string
    }

    class SubsetBounds <<DTO>> #FFF9C4 {
        +XMin, XMax: int
        +YMin, YMax: int
        +ZMin, ZMax: int
    }

    class LoadCubeRequest <<DTO>> #FFF9C4 {
        +ImagePath: string
        +MaskPath: string?
        +HduIndex: int
        +Subset: SubsetBounds?
        +ZAxisSelection: int
    }
}

' ─────────────────────────────────────────────────────────────────────────────
' Service interfaces — ACL (Anti-Corruption Layer) boundary
' ─────────────────────────────────────────────────────────────────────────────
package "Service Interfaces — ACL boundary" <<Rectangle>> #FFF3E0 {

    interface IFitsService <<interface>> {
        +OpenImageAsync(path: string, ct): Task<FitsFileInfo>
        +OpenMaskAsync(path: string, ct): Task<FitsFileInfo>
        +GetHeaderTextAsync(path, hdu: int, ct): Task<string>
    }

    interface IFileDialogService <<interface>> {
        +PickFileAsync(title, dir, ext[]): Task<string?>
    }

    interface IVolumeService <<interface>> {
        +IsCubeLoaded: bool
        +LoadCubeAsync(request, progress, ct): Task
    }
}

' ─────────────────────────────────────────────────────────────────────────────
' Adapters — Unity assembly (only here may UnityEngine / P/Invoke appear)
' ─────────────────────────────────────────────────────────────────────────────
package "Adapters — Unity assembly (UnityEngine allowed)" <<Rectangle>> #FFEBEE {

    class FitsServiceAdapter <<Unity>> #FCE4EC {
        ' Wraps FitsReader P/Invoke calls.
        ' Opens file, reads headers, closes file — no IntPtr crosses the boundary.
    }

    class StandaloneFileDialogAdapter <<Unity>> #FCE4EC {
        ' Wraps StandaloneFileBrowser async callback into a Task<string?>.
        ' Persists last directory via PlayerPrefs.
    }

    class VolumeServiceAdapter <<Unity>> #FCE4EC {
        ' Wraps VolumeCommandController + coroutine lifecycle.
        ' Local mode: in-process. Future: JSON-RPC over named pipe (ADR-0002).
    }
}

' ─────────────────────────────────────────────────────────────────────────────
' Relationships
' ─────────────────────────────────────────────────────────────────────────────

FileTabView       ..>  IFileTabViewModel   : binds to
FileTabViewModel  ..|> IFileTabViewModel   : implements
FileTabViewModel  *--  SubsetBoundsViewModel
FileTabViewModel  -->  IFitsService
FileTabViewModel  -->  IFileDialogService
FileTabViewModel  -->  IVolumeService

FitsServiceAdapter             ..|> IFitsService         : implements
StandaloneFileDialogAdapter    ..|> IFileDialogService   : implements
VolumeServiceAdapter           ..|> IVolumeService       : implements

FitsFileInfo   <.. FileTabViewModel   : "returned by\nIFitsService"
LoadCubeRequest <.. FileTabViewModel  : "passed to\nIVolumeService"
SubsetBounds    <.. SubsetBoundsViewModel : "snapshot via ToDto()"
HduInfo         --* FitsFileInfo

@enduml
